--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,17 @@
-# Compiled class file
 *.class
+.gradle
+/build/
+/bin/
+/.settings/
+.project
+.classpath
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Package Files
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Serverless directories
+.serverless
+
+!/gradle/wrapper/gradle-wrapper.jar
